--- a/backend/SupportWay.API/appsettings.Development.json
+++ b/backend/SupportWay.API/appsettings.Development.json
@@ -12,5 +12,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+    "Storage": {
+    "Provider": "S3",
+    "Endpoint": "http://localhost:9000",
+    "AccessKey": "minio",
+    "SecretKey": "minio12345",
+    "Bucket": "supportway",
+    "ForcePathStyle": true
   }
 }
